2014-02-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/init.c, sdl/main.c: Avoid "undefined reference to PLATFORM_Time" linker
  error when configured --with-sound=sdl but --with-video != sdl.


2014-02-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE, DOC/CREDITS: With Hias' help - documented behaviour of the XEGS
  cartridges more precisely. Also added a different variant of the XEGS 64 KB
  cartridge - both variants were manufactured by Atari.


2014-01-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Based on description by Hias, added minimal support for the 32
  and 64 MB variants of The!Cart.

* DOC/cart.txt: Added column that describes state of emulation support of
  the cartridge types. Also other fixes.


2014-01-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* dos/dos_sb.c: Bring indentation more into line with the apparent standard.

* dos/sound_dos.c, dos/dos_sb.[ch], configure.ac: Apply SOUND_THIN_API to DOS
  sound. Also fix two old bugs: pitch being wrong, and sound not working in
  one-shot mode (DSP 1.xx).

* sound.c, ui.c: Move code that stores current sound settings in Sound_desired
  - previously settings were stored only when changed from GUI, but not when
  changed from command line params.


2014-01-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fix obvious mistake in System Settings, that lead to buffer overflow.

* cartridge.c, DOC/cart.txt, DOC/CREDITS: Fixes by Matthias Reichl for
  emulation of The!Cart.


2013-12-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c: Make turbo mode considerably faster, by avoiding pointless screen
  redraws.

* sdl/sound.c, sound.c: Fix stereo sound on SDL and -sound/-nosound parameters,
  broken when introducing SOUND_THIN_API.


2013-12-15  Tomasz Krasuski  <kr0tki@poczta.onet.pl>